fix padding + background of collapse

--- a/src/styles/_antd.scss
+++ b/src/styles/_antd.scss
@@ -190,12 +190,12 @@
 }
 
 .ant-collapse {
-    border-radius: 0;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.5) 70%, rgba(0, 0, 0, 0) 110%);
+    border-radius: 0 !important;
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.5) 70%, rgba(0, 0, 0, 0) 110%) !important;
 
     .ant-collapse-item {
         border-radius: 0;
-        border: none;
+        border: none !important;
 
         .ant-collapse-header {
             overflow: hidden;
@@ -231,6 +231,10 @@
             color: white;
             border: none;
             background: linear-gradient(to right, rgba(0, 0, 0, 0.3) 70%, rgba(0, 0, 0, 0) 110%);
+
+            .ant-collapse-content-box {
+                padding: 1.5rem 0 !important;
+            }
         }
     }
 }
